fix-ui: h1 lapel and whitespace

--- a/_sass/wtsa.scss
+++ b/_sass/wtsa.scss
@@ -136,7 +136,7 @@ html {
 		color: $heading-lapel-color;
 		font-size: 0.8em;
 		font-weight: initial;
-		margin-left: -58px;
+		margin-left: -52px;
 		margin-right: 15px;
 	}
 	h2:before {
